<resources>
    <string name="app_name">CandyApp</string>
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="title_log_in">Login</string>
    <string name="error_required_field">Required Field</string>
    <string name="username_or_password_not_valid">username or password is invalid</string>
    <string name="prompt_conf_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="new_user">new User?</string>
    <string name="required_field">Required Field</string>
    <string name="passwords_not_matches">Password not matches</string>
    <string name="invalid_password">Invalid password</string>
    <string name="loading">Loading…</string>
    <string name="no_data">No candy Here</string>
    <string name="name">name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="dismiss">Dismiss</string>
</resources>
